(library
 (name instance_api)
 (modules instance_api)
 (wrapped false)
 (libraries cmdliner lwt
  cerb_frontend bmc))

(executable
 (name instance)
 (public_name instance-concrete)
 (package cerberus-web)
 (flags (:standard -w -27))
 (modules instance)
 (libraries str lwt cohttp-lwt-unix ezgzip
  cerb_frontend cerb_backend mem_concrete util instance_api))

(executable
 (name instance_symbolic)
 (public_name instance-symbolic)
 (package cerberus-web)
 (flags (:standard -w -27))
 (modules instance_symbolic)
 (libraries str lwt cohttp-lwt-unix ezgzip
  cerb_frontend cerb_backend mem_symbolic util instance_api))

(executable
 (name web)
 (public_name web)
 (package cerberus-web)
 (flags (:standard -w -27))
 (modules web)
 (libraries lwt cohttp-lwt-unix ezgzip
  cerb_frontend cerb_backend mem_concrete util instance_api))

(rule
 (target instance_symbolic.ml)
 (deps instance.ml)
 (action (copy instance.ml instance_symbolic.ml)))
