(include_subdirs qualified)

(library
 (name cn)
 (public_name cn)
 (flags
  (:standard -w -37 -open Monomorphic.Int))
 (libraries
  cerb_backend
  cerb_frontend
  cerb_util
  mem_concrete
  menhirLib
  monomorphic
  ocamlgraph
  result
  str
  unix)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.fold
   ppx_deriving.map
   ppx_deriving.ord
   ppx_deriving.show)))
