(include_subdirs qualified)

(library
 (name cn)
 (public_name cn)
 (flags
  (:standard -w @60 -open Monomorphic.Int))
 (libraries
  cerb_backend
  cerb_frontend
  cerb_util
  mem_concrete
  menhirLib
  monomorphic
  ocamlgraph
  ppx_deriving_yojson.runtime
  result
  str
  unix
  yojson)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.fold
   ppx_deriving.map
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving_yojson)))
